add animate all

--- a/certificates.html
+++ b/certificates.html
@@ -125,16 +125,16 @@
   <main class="main" data-scroll-container>
     <div class="main__border"></div>
     <section class="top" data-scroll-section id="top"><div class="main__border"></div></section>
-    <section class="contacts" data-scroll-section>
+    <section class="certificates" data-scroll-section>
       <div class="main__border"></div>
-      <div class="container contacts__container">
+      <div class="container certificates__container">
         <div class="certificates__block">
           <h1 class="certificates__head">СЕРТИФИКАТЫ</h1>
           <p class="certificates__desc">Мы подтверждаем свои компетенции и профессионализм с помощью сертификатов, с которыми можно ознакомиться ниже.</p>
         </div>
       </div>
       <div class="certificates__divider"></div>
-      <div class="container contacts__container">
+      <div class="container certificates__container">
         <div class="certificates__flex">
           <div class="certificates__info">
             <h4 class="certificates__heading">Сертифицированный партнер 1С-Битрикс</h4>
@@ -155,7 +155,7 @@
         </div>
       </div>
       <div class="certificates__divider"></div>
-      <div class="container contacts__container">
+      <div class="container certificates__container">
         <div class="certificates__flex">
           <div class="certificates__info">
             <h4 class="certificates__heading">Сертификат о присвоении компетенции «Системное администрирование и эксплуатация»</h4>
@@ -176,7 +176,7 @@
         </div>
       </div>
       <div class="certificates__divider"></div>
-      <div class="container contacts__container">
+      <div class="container certificates__container">
         <div class="certificates__flex">
           <div class="certificates__info">
             <h4 class="certificates__heading">Сертификат о присвоении компетенции «Крупные корпоративные внедрения» расширенного уровня</h4>
