add compatencies img

--- a/competencies.html
+++ b/competencies.html
@@ -136,7 +136,10 @@
       <div class="competencies__divider"></div>
       <div class="container competencies__container">
         <div class="competencies__bottom">
-          <h3 class="competencies__hedading">Композитный сайт</h3>
+          <div class="competencies__image">
+            <h3 class="competencies__hedading">Композитный сайт</h3>
+            <img src="img/competencies/competencies_1.webp" alt="">
+          </div>
           <div class="competencies__flex">
             <div class="competencies__info">
               <p class="competencies__description">
@@ -166,7 +169,10 @@
       <div class="competencies__divider"></div>
       <div class="container competencies__container">
         <div class="competencies__bottom">
-          <h3 class="competencies__hedading">Интеграция с «1С:Предприятие»</h3>
+          <div class="competencies__image">
+            <h3 class="competencies__hedading">Интеграция с «1С:Предприятие»</h3>
+            <img src="img/competencies/competencies_1.webp" alt="">
+          </div>
           <div class="competencies__flex">
             <div class="competencies__info">
               <p class="competencies__description">
