--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             <div class="articles__swiper swiper">
               <ul class="articles__list swiper-wrapper">
                 <li class="articles__item swiper-slide">
-                  <a href="#" class="articles__link">
+                  <a href="article.html" class="articles__link">
                     <div class="articles__image">
                       <img src="img/articles/articles_1.webp" alt="">
                       <span class="articles__date">31.07.2023</span>
@@ -541,7 +541,7 @@
                   </a>
                 </li>
                 <li class="articles__item swiper-slide">
-                  <a href="#" class="articles__link">
+                  <a href="article.html" class="articles__link">
                     <div class="articles__image">
                       <img src="img/articles/articles_2.webp" alt="">
                       <span class="articles__date">31.07.2023</span>
@@ -553,7 +553,7 @@
                   </a>
                 </li>
                 <li class="articles__item swiper-slide">
-                  <a href="#" class="articles__link">
+                  <a href="article.html" class="articles__link">
                     <div class="articles__image">
                       <img src="img/articles/articles_3.webp" alt="">
                       <span class="articles__date">31.07.2023</span>
@@ -565,7 +565,7 @@
                   </a>
                 </li>
                 <li class="articles__item swiper-slide">
-                  <a href="#" class="articles__link">
+                  <a href="article.html" class="articles__link">
                     <div class="articles__image">
                       <img src="img/articles/articles_4.webp" alt="">
                       <span class="articles__date">31.07.2023</span>
@@ -577,7 +577,7 @@
                   </a>
                 </li>
                 <li class="articles__item swiper-slide">
-                  <a href="#" class="articles__link">
+                  <a href="article.html" class="articles__link">
                     <div class="articles__image">
                       <img src="img/articles/articles_4.webp" alt="">
                       <span class="articles__date">31.07.2023</span>
