--- a/generation.html
+++ b/generation.html
@@ -322,7 +322,7 @@
                   <span>Я даю свое согласие на <a href="policy.html" class="text text__middle"><span>обработку персональных данных</span></a>.</span>
                 </label>
                 <div class="btn btn__input generation__form_button">
-                  <input type="submit" name="submit" value="Отправить" class="button__text">
+                  <input type="submit" name="submit" value="Сгенерировать договор" class="button__text">
                   <span class="button__hover"></span>
                 </div>
               </div>
@@ -455,7 +455,7 @@
                   <span>Я даю свое согласие на <a href="policy.html" class="text text__middle"><span>обработку персональных данных</span></a>.</span>
                 </label>
                 <div class="btn btn__input generation__form_button">
-                  <input type="submit" name="submit" value="Отправить" class="button__text">
+                  <input type="submit" name="submit" value="Сгенерировать договор" class="button__text">
                   <span class="button__hover"></span>
                 </div>
               </div>
@@ -679,7 +679,7 @@
                   <span>Я даю свое согласие на <a href="policy.html" class="text text__middle"><span>обработку персональных данных</span></a>.</span>
                 </label>
                 <div class="btn btn__input generation__form_button">
-                  <input type="submit" name="submit" value="Отправить" class="button__text">
+                  <input type="submit" name="submit" value="Сгенерировать договор" class="button__text">
                   <span class="button__hover"></span>
                 </div>
               </div>
