--- a/index.html
+++ b/index.html
@@ -127,26 +127,7 @@
     <section class="top" data-scroll-section id="top"><div class="main__border"></div></section>
     <section class="digital" data-scroll-section>
       <div class="main__border"></div>
-      <div class="digital__square">
-        <ul class="digital__square_list">
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-          <li class="digital__square_item"></li>
-        </ul>
-      </div>
+      <div id="digital__square" class="digital__square"></div>
       <div class="container digital__container">
         <ul class="digital_social_list" data-scroll data-scroll-speed="0">
           <li>
@@ -1113,6 +1094,7 @@
   <script src="js/scroll.js"></script>
   <script src="js/scrollbar.js"></script>
   <script src="js/textarea.js"></script>
+  <script src="js/particles.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
