--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="digital__info" data-scroll data-scroll-speed="0">
           <h1 class="digital__head"><span>D</span><span>I</span><span>G</span><span>I</span><span>T</span><span>A</span><span>L</span><span> </span><br><span>&amp;</span> <span> </span><span>D</span><span>E</span><span>S</span><span>I</span><span>G</span><span>N</span></h1>
           <p class="digital__desc">
-            Команда дизайнеров и инженеров разрабатываем функциональные продукты широкого круга от идеи до реализации.
+            Команда дизайнеров и программных инженеров разрабатываем функциональные продукты широкого круга от идеи до реализации.
           </p>
         </div>
       </div>
@@ -175,7 +175,7 @@
             </li>
             <li class="accredited__item">
               <h4 class="accredited__head">Партнер 1С-Битрикс</h4>
-              <p class="accredited__desc">Не смотря на небольшой срок существования нашей компании мы уже сертифицированный партнер компании Битрикс</p>
+              <p class="accredited__desc">Несмотря на небольшой срок существования нашей компании мы уже сертифицированный партнер компании Битрикс</p>
             </li>
           </ul>
         </div>
@@ -392,7 +392,7 @@
           <div class="projects__flex">
             <h3 class="projects__head">eCommerce</h3>
             <div class="projects__right">
-              <p class="projects__desc">Функциональные и удобные площадки для интернет торговли рост продаж обязателен.</p>
+              <p class="projects__desc">Функциональные и удобные площадки для интернет-торговли рост продаж обязателен.</p>
               <button class="btn projects__button">
                 <span class="button__text">Подробнее</span>
                 <span class="button__hover"></span>
@@ -904,7 +904,7 @@
                 <h2 class="header__consultation_head">РАССКАЖИТЕ О ВАШЕМ ПРОЕКТЕ</h2>
                 <p class="header__consultation_desc">Опишите свою задачу и мы свяжемся с вами в ближайшее рабочее время.</p>
               </div>
-              <div class="header__consultation_contacts"><p class="header__consultation_description">Вы всегда можете написать нам на почту <a href="mailto://career@anyera.ru">career@anyera.ru</a> и задать любые интересующие вопросы</p></div>
+              <div class="header__consultation_contacts"><p class="header__consultation_description">Вы всегда можете написать нам на почту <a class="text" href="mailto://career@anyera.ru"><span class="text__rotate">career@anyera.ru</span></a> и задать любые интересующие вопросы</p></div>
             </div>
             <form id="form" class="header__forms_form">
               <div class="header__forms_form_controls">
