--- a/404.html
+++ b/404.html
@@ -422,7 +422,7 @@
                 <h2 class="header__consultation_head">РАССКАЖИТЕ О ВАШЕМ ПРОЕКТЕ</h2>
                 <p class="header__consultation_desc">Опишите свою задачу и мы свяжемся с вами в ближайшее рабочее время.</p>
               </div>
-              <div class="header__consultation_contacts"><p class="header__consultation_description">Вы всегда можете написать нам на почту <a href="mailto://career@anyera.ru">career@anyera.ru</a> и задать любые интересующие вопросы</p></div>
+              <div class="header__consultation_contacts"><p class="header__consultation_description">Вы всегда можете написать нам на почту <a class="text" href="mailto://career@anyera.ru"><span class="text__rotate">career@anyera.ru</span></a> и задать любые интересующие вопросы</p></div>
             </div>
             <form id="form" class="header__forms_form">
               <div class="header__forms_form_controls">
