--- a/project.html
+++ b/project.html
@@ -127,6 +127,7 @@
     <section class="project_top" data-scroll-section id="top" style="background: #001254;">
       <img class="project_top__back" src="img/project/project_1/project_shadow.webp" alt="">
       <div class="container project_top__container">
+        <div id="project_top__star" class="project_top__star"></div>
         <div class="project_top__block">
           <div class="project_top__info">
             <div class="project_top__info_block">
@@ -1088,6 +1089,7 @@
   <script src="js/scroll.js"></script>
   <script src="js/scrollbar.js"></script>
   <script src="js/textarea.js"></script>
+  <script src="js/particles.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
