--- a/contacts.html
+++ b/contacts.html
@@ -671,7 +671,7 @@
     </div>
   </div>
   <script>
-    window.onload = function () {
+  document.addEventListener("DOMContentLoaded", (event) => {
     //   document.body.classList.add('loaded_hiding');
     //   document.querySelector('.preloader__top').style.top = "-50%";
     //   document.querySelector('.preloader__bottom').style.top = "100%";
@@ -681,7 +681,7 @@
     //     document.body.classList.remove('loaded_hiding');
     //     document.querySelector('.preloader').style.display = "none";
     //   }, 500);
-    };
+  });
   </script>
   <script src="js/swiper.min.js"></script>
   <script src="js/form.js"></script>
