--- a/team.html
+++ b/team.html
@@ -863,7 +863,7 @@
     </div>
   </div>
   <script>
-    window.onload = function () {
+  document.addEventListener("DOMContentLoaded", (event) => {
     //   document.body.classList.add('loaded_hiding');
     //   document.querySelector('.preloader__top').style.top = "-50%";
     //   document.querySelector('.preloader__bottom').style.top = "100%";
@@ -873,7 +873,7 @@
     //     document.body.classList.remove('loaded_hiding');
     //     document.querySelector('.preloader').style.display = "none";
     //   }, 500);
-    };
+  });
   </script>
   <script src="js/swiper.min.js"></script>
   <script src="js/form.js"></script>
