--- a/index.html
+++ b/index.html
@@ -1085,6 +1085,7 @@
     //   }, 500);
   });
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="js/swiper.min.js"></script>
   <script src="js/form.js"></script>
   <script src="js/scroll.js"></script>
