fix animation sliders

--- a/career.html
+++ b/career.html
@@ -251,6 +251,7 @@
         </div>
       </div>
       <div class="career__divider"></div>
+      <div id="vacancy"></div>
       <div class="container career__container">
         <div class="career__block">
           <div class="career__left">
@@ -265,7 +266,7 @@
       </div>
       <div class="career__divider"></div>
     </section>
-    <section class="career_bottom" data-scroll-section id="vacancy">
+    <section class="career_bottom" data-scroll-section>
       <div class="career_bottom__block">
         <button class="expertise__button">
           <div class="container career_bottom__container">
