--- a/project.html
+++ b/project.html
@@ -310,6 +310,48 @@
                   <img src="img/project/project_1/project_phone_5.webp" alt="">
                 </div>
               </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_1.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_2.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_3.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_4.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_5.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_5.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_5.webp" alt="">
+                </div>
+              </li>
             </ul>
           </div>
         </div>
