--- a/generation.html
+++ b/generation.html
@@ -972,6 +972,15 @@
               </div>
               <div class="header__consultation_contacts"><p class="header__consultation_description">Вы всегда можете написать нам на почту <a class="text" href="mailto://career@anyera.ru"><span class="text__rotate">career@anyera.ru</span></a> и задать любые интересующие вопросы</p></div>
             </div>
+            <div class="form__successfully header__forms_form" id="form__successfully_form">
+              <div class="form__successfully_image">
+                <svg width="256" height="256" viewBox="0 0 256 256" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M226.83 74.8303L98.8298 202.83C98.4583 203.202 98.0171 203.497 97.5315 203.699C97.046 203.9 96.5254 204.003 95.9998 204.003C95.4741 204.003 94.9536 203.9 94.468 203.699C93.9824 203.497 93.5413 203.202 93.1698 202.83L37.1698 146.83C36.4192 146.08 35.9976 145.062 35.9976 144C35.9976 142.939 36.4192 141.921 37.1698 141.17C37.9203 140.42 38.9383 139.998 39.9998 139.998C41.0612 139.998 42.0792 140.42 42.8298 141.17L95.9998 194.34L221.17 69.1703C221.92 68.4197 222.938 67.998 224 67.998C225.061 67.998 226.079 68.4197 226.83 69.1703C227.58 69.9208 228.002 70.9388 228.002 72.0003C228.002 73.0617 227.58 74.0797 226.83 74.8303Z" fill="currentColor"/>
+                </svg>
+              </div>
+              <h4 class="form__successfully_head">Отправлено</h4>
+              <p class="form__successfully_desc">Форма заполнена и отправлена. Спасибо за обращение в ближайшее время мы свяжемся с вами</p>
+            </div>
             <form id="form" class="header__forms_form">
               <div class="header__forms_form_controls">
                 <div class="form__control">
@@ -1079,6 +1088,15 @@
         </button>
         <div class="feedback_popup__blocks">
           <div class="feedback_popup__block">
+            <div class="form__successfully" id="form__successfully_form__feedback">
+              <div class="form__successfully_image">
+                <svg width="256" height="256" viewBox="0 0 256 256" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M226.83 74.8303L98.8298 202.83C98.4583 203.202 98.0171 203.497 97.5315 203.699C97.046 203.9 96.5254 204.003 95.9998 204.003C95.4741 204.003 94.9536 203.9 94.468 203.699C93.9824 203.497 93.5413 203.202 93.1698 202.83L37.1698 146.83C36.4192 146.08 35.9976 145.062 35.9976 144C35.9976 142.939 36.4192 141.921 37.1698 141.17C37.9203 140.42 38.9383 139.998 39.9998 139.998C41.0612 139.998 42.0792 140.42 42.8298 141.17L95.9998 194.34L221.17 69.1703C221.92 68.4197 222.938 67.998 224 67.998C225.061 67.998 226.079 68.4197 226.83 69.1703C227.58 69.9208 228.002 70.9388 228.002 72.0003C228.002 73.0617 227.58 74.0797 226.83 74.8303Z" fill="currentColor"/>
+                </svg>
+              </div>
+              <h4 class="form__successfully_head">Отправлено</h4>
+              <p class="form__successfully_desc">Форма заполнена и отправлена. Спасибо за обращение в ближайшее время мы свяжемся с вами</p>
+            </div>
             <form id="form__feedback" class="feedback_popup__forms_form">
               <h4 class="feedback_popup__head">Обратная связь</h4>
               <div class="header__forms_form_controls">
