--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </li>
         </ul>
         <div class="digital__info" data-scroll data-scroll-speed="0">
-          <h1 class="digital__head"><span>D</span><span>I</span><span>G</span><span>I</span><span>T</span><span>A</span><span>L</span><span> </span><br><span>&amp;</span> <span> </span><span>D</span><span>E</span><span>S</span><span>I</span><span>G</span><span>N</span></h1>
+          <h1 class="digital__head">DIGITAL &amp; <br>DESIGN</h1>
           <p class="digital__desc">
             Команда дизайнеров и программных инженеров разрабатываем функциональные продукты широкого круга от идеи до реализации.
           </p>
@@ -748,12 +748,12 @@
                   </svg>
                 </a>
                 <ul class="header__subnav_list">
-                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Аналитика</span></p></a></li>
-                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Дизайн</span></p></a></li>
-                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Веб-разработка</span></p></a></li>
-                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Поддержка и развитие</span></p></a></li>
-                  <li class="header__subnav_item"><a href="#" class="header__subnav_link"><p class="text"><span class="text__rotate">Автоматизация</span></p></a></li>
-                  <li class="header__subnav_item"><a href="price.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Прайс-лист</span></p></a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link">Аналитика</a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link">Дизайн</a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link">Веб-разработка</a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link">Поддержка и развитие</a></li>
+                  <li class="header__subnav_item"><a href="#" class="header__subnav_link">Автоматизация</a></li>
+                  <li class="header__subnav_item"><a href="price.html" class="header__subnav_link">Прайс-лист</a></li>
                 </ul>
               </li>
               <li class="header__nav_item">
@@ -764,9 +764,9 @@
                   </svg>
                 </a>
                 <ul class="header__subnav_list">
-                  <li class="header__subnav_item"><a href="team.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Команда</span></p></a></li>
-                  <li class="header__subnav_item"><a href="certificates.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Сертификаты</span></p></a></li>
-                  <li class="header__subnav_item"><a href="competencies.html" class="header__subnav_link"><p class="text"><span class="text__rotate">Компетенции партнера 1С-Битрикс</span></p></a></li>
+                  <li class="header__subnav_item"><a href="team.html" class="header__subnav_link">Команда</a></li>
+                  <li class="header__subnav_item"><a href="certificates.html" class="header__subnav_link">Сертификаты</a></li>
+                  <li class="header__subnav_item"><a href="competencies.html" class="header__subnav_link">Компетенции партнера 1С-Битрикс</a></li>
                 </ul>
               </li>
               <li class="header__nav_item">
@@ -997,6 +997,14 @@
                   <span class="form__bar"></span>
                   <span class="form__border"></span>
                   <small class="form__error">Введите описание проекта</small>
+                </div>
+                <div class="form__control">
+                  <input class="form__input" type="text" minl="0" maxl="40" name="promocode" id="promocode" />
+                  <small class="form__counter"><span class="form__counter_min">0</span> из <span class="form__counter_max">0</span></small>
+                  <label class="form__label" for="promocode">Промокод</label>
+                  <span class="form__bar"></span>
+                  <span class="form__border"></span>
+                  <small class="form__error">Введите промокод</small>
                 </div>
               </div>
               <div class="header__form_bottom">
