--- a/services.html
+++ b/services.html
@@ -788,6 +788,14 @@
                   <span class="form__border"></span>
                   <small class="form__error">Введите описание проекта</small>
                 </div>
+                <div class="form__control">
+                  <input class="form__input" type="text" minl="0" maxl="40" name="promocode" id="promocode" />
+                  <small class="form__counter"><span class="form__counter_min">0</span> из <span class="form__counter_max">0</span></small>
+                  <label class="form__label" for="promocode">Промокод</label>
+                  <span class="form__bar"></span>
+                  <span class="form__border"></span>
+                  <small class="form__error">Введите промокод</small>
+                </div>
               </div>
               <div class="header__form_bottom">
                 <label class="form__policy">
